--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,10 @@ body {
 } */
 
 /* Tailwind Styles */
+body {
+  @apply bg-blue-950;
+}
+
 .app {
   @apply relative z-10 flex justify-center items-center flex-col max-w-7xl mx-auto sm:px-16 px-6;
 }
@@ -35,19 +39,23 @@ body {
 }
 
 .outline_btn {
-  @apply rounded-full border border-black bg-transparent py-1.5 px-5 text-black transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full border border-white bg-transparent py-1.5 px-5 text-gray-300 transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
 }
 
 .head_text {
-  @apply text-5xl font-extrabold leading-[1.15] text-black sm:text-6xl;
+  @apply text-5xl font-extrabold leading-[1.15] text-gray-100 sm:text-6xl;
 }
 
 .orange_gradient {
-  @apply bg-gradient-to-r from-amber-500 via-orange-600 to-yellow-500 bg-clip-text text-transparent;
+  @apply bg-gradient-to-r from-purple-600 via-pink-600 to-blue-500 bg-clip-text text-transparent;
 }
 
 .green_gradient {
-  @apply bg-gradient-to-r from-green-400 to-green-500 bg-clip-text text-transparent;
+  @apply bg-gradient-to-r from-green-700 to-green-800 bg-clip-text text-transparent;
+}
+
+.red_gradient {
+  @apply bg-gradient-to-r from-red-700 to-red-800 bg-clip-text text-transparent;
 }
 
 .blue_gradient {
@@ -55,7 +63,7 @@ body {
 }
 
 .desc {
-  @apply mt-5 text-lg text-gray-600 sm:text-xl max-w-2xl;
+  @apply mt-5 text-lg text-gray-500 sm:text-xl max-w-2xl;
 }
 
 .search_input {
@@ -70,14 +78,17 @@ body {
   @apply rounded-xl border border-gray-200 bg-white/20 shadow-[inset_10px_-50px_94px_0_rgba(199_199_199_0.2)] backdrop-blur p-5;
 }
 
-
 .prompt_layout {
   @apply space-y-6 py-8 sm:columns-2 sm:gap-6 xl:columns-3;
 }
 
+.prompt_Profile_layout {
+  @apply space-y-6 py-8 sm:columns-2 sm:gap-1 xl:columns-4;
+}
+
 /* Feed Component */
 .feed {
-  @apply mt-16 mx-auto w-full max-w-xl flex justify-center items-center flex-col gap-2;
+  @apply mt-8 mx-auto w-full max-w-xl flex justify-center items-center flex-col gap-2;
 }
 
 /* Form Component */
@@ -85,20 +96,21 @@ body {
   @apply w-full flex rounded-lg h-[200px] mt-2 p-3 text-sm text-gray-500 outline-0;
 } */
 .form_textarea {
-  @apply w-full flex rounded-lg h-[200px] mt-2 p-3 text-sm text-gray-700 outline-none border border-gray-300 bg-white focus:border-blue-500;
+  @apply w-full rounded-md mt-2 p-3 text-sm text-gray-700 outline-none border border-gray-300 bg-gray-300 focus:border-blue-500 focus:ring-1 focus:ring-blue-500;
 }
 
 .form_input {
-  @apply w-full flex rounded-lg mt-2 p-3 text-sm text-gray-500 outline-0 border border-gray-300 focus:border-blue-500;
+  @apply w-full rounded-md mt-2 p-3 text-sm text-gray-700 outline-none border border-gray-300 bg-gray-300 focus:border-blue-500 focus:ring-1 focus:ring-blue-500;
 }
 
 .form_group {
-  @apply flex flex-col gap-3;
+  @apply flex flex-col;
 }
+
 
 /* Nav Component */
 .logo_text {
-  @apply max-sm:hidden font-satoshi font-semibold text-lg text-black tracking-wide;
+  @apply max-sm:hidden font-satoshi font-semibold text-lg text-gray-300 tracking-wide;
 }
 
 .dropdown {
@@ -112,7 +124,7 @@ body {
 
 /* PromptCard Component */
 .prompt_card {
-  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
+  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/70 shadow-2xl bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
 }
 
 .flex-center {
